--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,42 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  align-items: center;
+  padding: 15px;
+  border: var(--primary-color) 1px solid;
+}
+
+input {
+  width: 500px;
+  height: 40px;
+  border: none;
+  outline: none;
+  border-bottom: #ffffff 1px solid;
+  background-color: #4b4b4b;
+  border-radius: 10px;
+  padding: 0 10px;
+  box-shadow: 10px 10px 8px rgb(26, 26, 26);
+  font-size: 20px;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+}
+
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -33,6 +69,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  text-shadow: 5px 8px 8px rgb(18, 18, 18);
 }
 
 button {
