--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -47,7 +46,6 @@ p {
   font-size: 20px;
 }
 
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -79,8 +77,16 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  color: #fff;
   cursor: pointer;
   transition: border-color 0.25s;
+}
+button:disabled {
+  background-color: #353535;
+  color: #a4a4a4;
+}
+button:disabled:hover {
+  border-color: transparent;
 }
 button:hover {
   border-color: #646cff;
@@ -88,17 +94,4 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
